--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -4,3 +4,5 @@
 @import "element/process";
 @import "element/container";
 @import "element/datavalue";
+@import "element/elementFrame";
+@import "line/lineSet";
