--- a/src/style/element/database.scss
+++ b/src/style/element/database.scss
@@ -2,19 +2,20 @@
   position: absolute;
   border-left: 0.1rem #000 solid;
   border-right: 0.1rem #000 solid;
-  margin: 2rem;
-  width: 3rem;
-  height: 2rem;
+  width: 70%;
+  margin-left: 12%;
+  margin-top: 20%;
+  height: 60%;
 }
 
 // Top oval
 .dragging-database::before {
   content: '';
   display: block;
-  width: 3rem;
-  height: 1rem;
-  margin-left: -0.1rem;
-  margin-top: -0.6rem;
+  width: 100%;
+  height: 50%;
+  margin-left: -0.1em;
+  margin-top: -20%;
   border-radius: 50%;
   border: 0.1rem #000 solid;
 }
@@ -23,10 +24,10 @@
 .dragging-database::after {
   content: '';
   display: block;
-  width: 3rem;
-  height: 1rem;
+  width: 100%;
+  height: 50%;
   margin-left: -0.1rem;
-  margin-top: 0.7rem;
+  margin-top: 25%;
   border-radius: 50%;
   border: 0.1rem #000 solid;
 }
