--- a/src/style/element/process.scss
+++ b/src/style/element/process.scss
@@ -1,9 +1,10 @@
 .dragging-process {
   position: absolute;
   border: 0.1rem #000 solid;
-  margin: 2rem;
-  width: 3.3rem;
-  height: 2.3rem;
+  width: 80%;
+  margin-top: 15%;
+  margin-left: 7%;
+  height: 60%;
 }
 .dragging-process::after {
   content: 'P';
