--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -5,4 +5,9 @@
 @import "element/container";
 @import "element/datavalue";
 @import "element/elementFrame";
+@import "element/start";
+@import "element/end";
 @import "line/lineSet";
+@import "rightClick/rightClickManu";
+@import "rightClick/deleteButton";
+@import "rightClick/input";
