--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,13 +1,7 @@
 @import "frame/frame";
-@import "element/database";
-@import "element/tool";
-@import "element/process";
-@import "element/container";
-@import "element/datavalue";
 @import "element/elementFrame";
-@import "element/start";
-@import "element/end";
+@import "element/element";
+@import "element/elementOnSide";
 @import "line/lineSet";
 @import "rightClick/rightClickManu";
-@import "rightClick/deleteButton";
-@import "rightClick/input";
+@import "rightClick/dataObject";
